--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ spacy >= 3.7.2
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 
 icecream >= 2.1
+jupyterlab >= 4.0
 networkx >= 3.2
 pre-commit >= 3.5
 pyvis >= 0.3
