--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 git+https://github.com/thunlp/OpenNRE
 
-spacy >= 3.7.2
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+spacy >= 3.7
+https://huggingface.co/spacy/en_core_web_sm/resolve/main/en_core_web_sm-any-py3-none-any.whl
 
 icecream >= 2.1
 jupyterlab >= 4.0
 networkx >= 3.2
 pre-commit >= 3.5
+pytest >= 7.4
 pyvis >= 0.3
 sense2vec >= 2.0
 span_marker >= 1.5
