--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ dependencies = [
     "matplotlib >= 3.8",
     "networkx >= 3.2",
     "pyvis >= 0.3",
+    "pulp >= 2.7",
     "sense2vec >= 2.0",
     "span_marker >= 1.5",
     "streamlit >= 1.28",
