--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ networkx >= 3.2
 pre-commit >= 3.5
 pytest >= 7.4
 pyvis >= 0.3
+pulp >= 2.7
 sense2vec >= 2.0
 span_marker >= 1.5
 streamlit >= 1.28
