--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+streamlit < 1.29
+
 git+https://github.com/thunlp/OpenNRE
 
 spacy >= 3.7
@@ -13,5 +15,4 @@ pyvis >= 0.3
 pulp >= 2.7
 sense2vec >= 2.0
 span_marker >= 1.5
-streamlit >= 1.28
 wordcloud >= 1.9
