--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ spacy >= 3.7
 https://huggingface.co/spacy/en_core_web_sm/resolve/main/en_core_web_sm-any-py3-none-any.whl
 
 icecream >= 2.1
+ipywidgets >= 8.1
 jupyterlab >= 4.0
 matplotlib >= 3.8
 networkx >= 3.2
