--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ dependencies = [
     "networkx >= 3.2",
     "pyvis >= 0.3",
     "pulp >= 2.7",
+    "spacy-dbpedia-spotlight >= 0.2.6",
     "span_marker >= 1.5",
     "wordcloud >= 1.9",
 ]
