--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ dependencies = [
     "pulp >= 2.7",
     "spacy-dbpedia-spotlight >= 0.2.6",
     "span_marker >= 1.5",
+    "transformers >= 4.35",
     "wordcloud >= 1.9",
 ]
 
