prep integration for REBEL

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ dependencies = [
     "pyvis >= 0.3",
     "pulp >= 2.7",
     "spacy-dbpedia-spotlight >= 0.2.6",
+    "spacyfishing >= 0.1.8",
     "span_marker >= 1.5",
     "transformers >= 4.35",
     "wordcloud >= 1.9",
