--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,10 @@ dependencies = [
     "en_core_web_sm @ https://huggingface.co/spacy/en_core_web_sm/resolve/main/en_core_web_sm-any-py3-none-any.whl",
 
     "open-nre @ git+https://github.com/thunlp/OpenNRE",
+
+    "beautifulsoup4 >= 4.12",
     "icecream >= 2.1",
+    "markdown2 >= 2.4",
     "matplotlib >= 3.8",
     "networkx >= 3.2",
     "pyvis >= 0.3",
