--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,7 @@
 streamlit < 1.29
 ipywidgets >= 8.1
 jupyterlab >= 4.0
+jupyterlab_execute_time >= 3.1
 pre-commit >= 3.5
 pytest >= 7.4
 sense2vec >= 2.0
