refactor workflow methods; improved demos

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,8 +66,8 @@ dependencies = [
     "markdown2 >= 2.4",
     "matplotlib >= 3.8",
     "networkx >= 3.2",
-    "pyvis >= 0.3",
     "pulp >= 2.7",
+    "pyvis >= 0.3",
     "qwikidata >= 0.4",
     "spacy-dbpedia-spotlight >= 0.2.6",
     "spacyfishing >= 0.1.8",
@@ -91,6 +91,7 @@ demo = [
     "ipywidgets >= 8.1",
     "jupyterlab_execute_time >= 3.1",
     "jupyterlab >= 4.0",
+    "pyinstrument >= 4.6",
     "sense2vec >= 2.0",
     "spacy-entity-linker >= 1.0",
     "streamlit < 1.29",
