--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ icecream >= 2.1
 markdown2 >= 2.4
 matplotlib >= 3.8
 networkx >= 3.2
-pyvis >= 0.3
 pulp >= 2.7
+pyinstrument >= 4.6
+pyvis >= 0.3
 qwikidata >= 0.4
 spacy-dbpedia-spotlight >= 0.2.6
 spacyfishing >= 0.1.8
