--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# this is required and used for specifically HF Spaces deployment, not PyPi
+
 spacy >= 3.7
 https://huggingface.co/spacy/en_core_web_sm/resolve/main/en_core_web_sm-any-py3-none-any.whl
 
