--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ https://huggingface.co/spacy/en_core_web_sm/resolve/main/en_core_web_sm-any-py3-
 git+https://github.com/thunlp/OpenNRE
 
 beautifulsoup4 >= 4.12
+GitPython >= 3.1
 icecream >= 2.1
 markdown2 >= 2.4
 matplotlib >= 3.8
