bugfix CI workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -e .
+          pip install git+https://github.com/thunlp/OpenNRE
           pip install pre-commit pytest
 
       - name: Run tests
