--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,12 @@ dependencies = [
 
 dev = [
     "build >= 1.0",
+    "Flask >= 3.0",
+    "mkdocs-git-revision-date-plugin >= 0.3",
+    "mkdocs-material >= 9.5",
+    "mknotebooks >= 0.8",
     "pre-commit >= 3.5",
+    "selenium >= 4.16",
     "twine >= 4.0",
 ]
 
