--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,14 @@
 build >= 1.0
+Flask >= 3.0
 ipywidgets >= 8.1
+mkdocs-git-revision-date-plugin >= 0.3
+mkdocs-material >= 9.5
+mknotebooks >= 0.8
 jupyterlab >= 4.0
 jupyterlab_execute_time >= 3.1
 pre-commit >= 3.5
 pytest >= 7.4
+selenium >= 4.16
 sense2vec >= 2.0
 spacy-entity-linker >= 1.0
 streamlit < 1.29
