show InGram in a notebook

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
 
     - Tutorial:
         - Example Usage: ex0_0.md
+        - Replicating "InGram": ex1_0.md
 
     - Technical Reference:
         - Package Reference: ref.md
