--- a/pkg_doc.cfg
+++ b/pkg_doc.cfg
@@ -23,6 +23,11 @@
         "InferRel_OpenNRE",
         "InferRel_Rebel",
         "RenderPyVis",
-        "NodeStyle"
+        "NodeStyle",
+	"GraphOfRelations",
+	"TransArc",
+	"RelDir",
+	"SheafSeed",
+	"Affinity"
     ]
 }
