use PyPi to install OpenNRE

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,9 @@ dependencies = [
     "markdown2 >= 2.4",
     "matplotlib >= 3.8",
     "networkx >= 3.2",
+    "open-nre >= 0.1.1",
     "pulp >= 2.7",
+    "pyinstrument >= 4.6",
     "pyvis >= 0.3",
     "qwikidata >= 0.4",
     "spacy >= 3.7",
@@ -102,7 +104,6 @@ demo = [
     "ipywidgets >= 8.1",
     "jupyterlab_execute_time >= 3.1",
     "jupyterlab >= 4.0",
-    "pyinstrument >= 4.6",
     "sense2vec >= 2.0",
     "spacy-entity-linker >= 1.0",
     "streamlit < 1.29",
