unit test coverage for deser

--- a/pkg_doc.cfg
+++ b/pkg_doc.cfg
@@ -7,8 +7,9 @@
 	"TextGraphs",
         "SimpleGraph",
         "Node",
-        "NodeEnum",
         "Edge",
+        "EnumBase",
+        "NodeEnum",
         "RelEnum",
         "PipelineFactory",
         "Pipeline",
