--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pulp >= 2.7
 pyinstrument >= 4.6
 pyvis >= 0.3
 qwikidata >= 0.4
+rdflib >= 7.0
 spacy-dbpedia-spotlight >= 0.2.6
 span_marker >= 1.5
 transformers >= 4.35
