--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,7 @@ mkdocs-material >= 9.5
 mknotebooks >= 0.8
 jupyterlab >= 4.0
 jupyterlab_execute_time >= 3.1
+kuzu >= 0.1,
 pre-commit >= 3.5
 pytest >= 7.4
 selenium >= 4.16
